mdapipkg/objects/Staging_Cvent_Transaction_Header__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <summarizedField>Staging_Cvent_Transaction_Detail__c.Value__c</summarizedField>
        <summaryForeignKey>Staging_Cvent_Transaction_Detail__c.Staging_Cvent_Transaction_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Budget_Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Currency</label>
        <referenceTo>c2g__codaDimension4__c</referenceTo>
        <relationshipLabel>Staging Cvent Transaction Header</relationshipLabel>
        <relationshipName>Staging_Cvent_Transaction_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Converted_To_Journal_c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted_To_Journal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Journal_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal Number</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Staging Cvent Transaction Header</relationshipLabel>
        <relationshipName>Staging_Cvent_Transaction_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registration_Currency_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Registration Currency Mapping</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Staging Cvent Transaction Header</relationshipLabel>
        <relationshipName>Staging_Cvent_Transaction_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Staging_Cvent_Transaction_Detail__c</fullName>
        <label>Staging Cvent Transaction Detail</label>
        <summaryForeignKey>Staging_Cvent_Transaction_Detail__c.Staging_Cvent_Transaction_Header__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <label>Staging Cvent Transaction Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Transaction_Date__c</columns>
        <columns>Registration_Currency_Mapping__c</columns>
        <columns>Budget_Currency__c</columns>
        <columns>Processed__c</columns>
        <columns>Journal_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Staging_Cvent_Header_To_Journal</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>Registration_Currency_Mapping__c</columns>
        <columns>Budget_Currency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>aBw6100000002Df</value>
        </filters>
        <filters>
            <field>Amount__c</field>
            <operation>equals</operation>
            <value>2800</value>
        </filters>
        <label>Staging Cvent Header To Journal</label>
    </listViews>
    <nameField>
        <label>Staging Cvent Transaction Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staging Cvent Transaction Header</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>